81-fixed converter error message spacing and color, and toggle buttons

--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -53,7 +53,7 @@ $body-text-color: #404040;
 $btn-secondary-bg: #fff;
 $modal-close-icon-color: hsla(0, 0%, 50%, 1);
 $modal-backdrop-color: #000;
-$error-text-color: hsla(7, 60%, 43%, 1);
+$error-text-color: hsla(0, 75%, 48%, 1);
 $nav-hover-color: #25a793;
 $font-color-dark-bg: #fff;
 $active-tab-color: rgba($dark-green, .6);
